--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,57 +1,59 @@
 version: '3.9'
 
 networks:
-  laravel:
-      name: laravel
+    proxy:
+        name: proxy
+        external: true
+    workspace:
+        name: workspace
+        external: true
+    local:
+        driver: bridge
 
 services:
   nginx:
     build:
       context: .
       dockerfile: ./.docker/nginx/Dockerfile
-    ports:
-      - "80:80"
+    restart: always
     volumes:
       - ./:/var/www/html:delegated
     depends_on:
       - php
-      - redis
-      - postgres
     networks:
-      - laravel
+        - proxy
+        - local
+    labels:
+        - traefik.enable=true
+        - traefik.http.routers.courses-api.rule=HostRegexp(`courses-api.{host:.+}`)
+        - traefik.http.services.courses-api.loadbalancer.server.port=80
 
-  postgres:
-    image: postgres:13.3
-    environment:
-        POSTGRES_DB: secret
-        POSTGRES_USER: secret
-        POSTGRES_PASSWORD: secret
-        POSTGRES_ROOT_PASSWORD: secret
-        PGDATA: "/etc/postgresql/15/main/"
-    restart: unless-stopped
-    volumes:
-      - ./data:/etc/postgresql/15/main/
-    ports:
-      - "5432:5432"
-    networks:
-      - laravel
+#  postgres:
+#    image: postgres:13.3
+#    container_name: postgres
+#    environment:
+#        POSTGRES_DB: secret
+#        POSTGRES_USER: secret
+#        POSTGRES_PASSWORD: secret
+#        POSTGRES_ROOT_PASSWORD: secret
+#        PGDATA: "/etc/postgresql/15/main/"
+#    restart: unless-stopped
+#    volumes:
+#      - ./data:/etc/postgresql/15/main/
+#    ports:
+#      - "5432:5432"
+#    networks:
+#      - laravel
 
   php:
     build:
       context: .
       dockerfile: ./.docker/php/Dockerfile
+    restart: always
     volumes:
       - ./:/var/www/html:delegated
-    networks:
-      - laravel
     environment:
-        - PHP_IDE_CONFIG=${PHP_IDE_CONFIG}
         - XDEBUG_CLIENT_HOST=${XDEBUG_CLIENT_HOST:-172.17.0.1}
-
-  redis:
-    image: redis:alpine
-    restart: unless-stopped
-    ports:
-      - "6379:6379"
     networks:
-      - laravel
+        - workspace
+        - local
